[package]
name = "asset-hub-westend-runtime"
edition = "2021"
version = "0.30.2"
description = "Westend variant of Asset Hub parachain runtime"
license = "Apache-2.0"

[dependencies]
log = { version = "0.4.22", default-features = false }
assets-common = { version = "0.21.0", default-features = false }
bp-asset-hub-rococo = { version = "0.17.0", default-features = false }
bp-asset-hub-westend = { version = "0.16.0", default-features = false }
bp-bridge-hub-rococo = { version = "0.21.0", default-features = false }
bp-bridge-hub-westend = { version = "0.17.0", default-features = false }
codec = { version = "3.7.4", features = [
	"derive",
	"max-encoded-len",
], package = "parity-scale-codec", default-features = false }
cumulus-pallet-aura-ext = { version = "0.20.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.20.0", default-features = false }
cumulus-pallet-session-benchmarking = { version = "21.0.0", default-features = false }
cumulus-pallet-weight-reclaim = { version = "0.2.0", default-features = false }
cumulus-pallet-xcm = { version = "0.19.1", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.20.0", features = [
	"bridging",
], default-features = false }
cumulus-primitives-aura = { version = "0.17.0", default-features = false }
cumulus-primitives-core = { version = "0.18.1", default-features = false }
cumulus-primitives-utility = { version = "0.20.0", default-features = false }
frame-benchmarking = { version = "40.2.0", optional = true, default-features = false }
frame-executive = { version = "40.0.1", default-features = false }
frame-metadata-hash-extension = { version = "0.8.0", default-features = false }
frame-support = { version = "40.1.0", default-features = false }
frame-system-benchmarking = { version = "40.0.0", optional = true, default-features = false }
frame-system-rpc-runtime-api = { version = "36.0.0", default-features = false }
frame-system = { version = "40.1.0", default-features = false }
frame-try-runtime = { version = "0.46.0", optional = true, default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
pallet-asset-conversion-ops = { version = "0.8.0", default-features = false }
pallet-asset-conversion-tx-payment = { version = "22.0.0", default-features = false }
pallet-asset-conversion = { version = "22.0.0", default-features = false }
pallet-asset-rewards = { version = "0.2.0", default-features = false }
pallet-assets-freezer = { version = "0.7.0", default-features = false }
pallet-assets = { version = "42.0.0", default-features = false }
pallet-aura = { version = "39.0.0", default-features = false }
pallet-authorship = { version = "40.0.0", default-features = false }
pallet-balances = { version = "41.1.0", default-features = false }
pallet-collator-selection = { version = "21.0.0", default-features = false }
pallet-message-queue = { version = "43.1.0", default-features = false }
pallet-migrations = { version = "10.1.0", default-features = false }
pallet-multisig = { version = "40.1.0", default-features = false }
pallet-nft-fractionalization = { version = "23.0.0", default-features = false }
pallet-nfts-runtime-api = { version = "26.0.0", default-features = false }
pallet-nfts = { version = "34.1.0", default-features = false }
pallet-proxy = { version = "40.1.0", default-features = false }
pallet-revive = { version = "0.6.1", default-features = false }
pallet-session = { version = "40.0.1", default-features = false }
pallet-state-trie-migration = { version = "44.1.0", default-features = false }
pallet-timestamp = { version = "39.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "40.0.0", default-features = false }
pallet-transaction-payment = { version = "40.0.0", default-features = false }
pallet-uniques = { version = "40.1.0", default-features = false }
pallet-utility = { version = "40.0.0", default-features = false }
pallet-xcm-benchmarks = { version = "20.0.0", optional = true, default-features = false }
pallet-xcm-bridge-hub-router = { version = "0.18.0", default-features = false }
pallet-xcm = { version = "19.1.2", default-features = false }
parachain-info = { version = "0.20.0", default-features = false, package = "staging-parachain-info" }
parachains-common = { version = "21.0.0", default-features = false }
polkadot-parachain-primitives = { version = "16.1.0", default-features = false }
polkadot-runtime-common = { version = "19.1.0", default-features = false }
primitive-types = { version = "0.13.1", features = [
	"codec",
	"num-traits",
	"scale-info",
], default-features = false }
scale-info = { version = "2.11.6", features = [
	"derive",
], default-features = false }
serde_json = { version = "1.0.132", features = [
	"alloc",
], default-features = false }
snowbridge-inbound-queue-primitives = { version = "0.2.2", default-features = false }
snowbridge-outbound-queue-primitives = { version = "0.2.2", default-features = false }
snowbridge-pallet-system-frontend = { version = "0.2.1", default-features = false }
snowbridge-runtime-common = { version = "0.13.0", default-features = false }
sp-api = { version = "36.0.1", default-features = false }
sp-block-builder = { version = "36.0.0", default-features = false }
sp-consensus-aura = { version = "0.42.0", default-features = false }
sp-core = { version = "36.1.0", default-features = false }
sp-genesis-builder = { version = "0.17.0", default-features = false }
sp-inherents = { version = "36.0.0", default-features = false }
sp-io = { version = "40.0.1", default-features = false }
sp-keyring = { version = "41.0.0", default-features = false }
sp-offchain = { version = "36.0.0", default-features = false }
sp-runtime = { version = "41.1.0", default-features = false }
sp-session = { version = "38.1.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-transaction-pool = { version = "36.0.0", default-features = false }
sp-version = { version = "39.0.0", default-features = false }
testnet-parachains-constants = { version = "13.0.0", features = [
	"westend",
], default-features = false }
westend-runtime-constants = { version = "20.0.0", default-features = false }
xcm-builder = { version = "20.1.1", default-features = false, package = "staging-xcm-builder" }
xcm-executor = { version = "19.1.2", default-features = false, package = "staging-xcm-executor" }
xcm-runtime-apis = { version = "0.7.1", default-features = false }
xcm = { version = "16.2.0", default-features = false, package = "staging-xcm" }
pvq-extension = { git = "https://github.com/open-web3-stack/PVQ", branch = "swap-extension-assets-info", default-features = false }
pvq-primitives = { git = "https://github.com/open-web3-stack/PVQ", branch = "swap-extension-assets-info", default-features = false }
pvq-runtime-api = { git = "https://github.com/open-web3-stack/PVQ", branch = "swap-extension-assets-info", default-features = false }
pvq-extension-core = { git = "https://github.com/open-web3-stack/PVQ", branch = "swap-extension-assets-info", default-features = false }
pvq-extension-fungibles = { git = "https://github.com/open-web3-stack/PVQ", branch = "swap-extension-assets-info", default-features = false }
pvq-extension-swap = { git = "https://github.com/open-web3-stack/PVQ", branch = "swap-extension-assets-info", default-features = false }

[dev-dependencies]
asset-test-utils = { version = "23.0.0" }
parachains-runtimes-test-utils = { version = "22.0.0" }

[build-dependencies]
substrate-wasm-builder = { version = "26.0.1", optional = true, default-features = false }

[features]
default = ["std"]
runtime-benchmarks = [
	"assets-common/runtime-benchmarks",
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-weight-reclaim/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"cumulus-primitives-core/runtime-benchmarks",
	"cumulus-primitives-utility/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-asset-conversion-ops/runtime-benchmarks",
	"pallet-asset-conversion-tx-payment/runtime-benchmarks",
	"pallet-asset-conversion/runtime-benchmarks",
	"pallet-asset-rewards/runtime-benchmarks",
	"pallet-assets-freezer/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"pallet-migrations/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-nft-fractionalization/runtime-benchmarks",
	"pallet-nfts/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-revive/runtime-benchmarks",
	"pallet-state-trie-migration/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"pallet-uniques/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-xcm-benchmarks/runtime-benchmarks",
	"pallet-xcm-bridge-hub-router/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"parachains-common/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"polkadot-runtime-common/runtime-benchmarks",
	"snowbridge-inbound-queue-primitives/runtime-benchmarks",
	"snowbridge-pallet-system-frontend/runtime-benchmarks",
	"snowbridge-runtime-common/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
	"xcm-runtime-apis/runtime-benchmarks",
	"xcm/runtime-benchmarks",
]
try-runtime = [
	"cumulus-pallet-aura-ext/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-weight-reclaim/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-asset-conversion-ops/try-runtime",
	"pallet-asset-conversion-tx-payment/try-runtime",
	"pallet-asset-conversion/try-runtime",
	"pallet-asset-rewards/try-runtime",
	"pallet-assets-freezer/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collator-selection/try-runtime",
	"pallet-message-queue/try-runtime",
	"pallet-migrations/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-nft-fractionalization/try-runtime",
	"pallet-nfts/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-revive/try-runtime",
	"pallet-session/try-runtime",
	"pallet-state-trie-migration/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-uniques/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-xcm-bridge-hub-router/try-runtime",
	"pallet-xcm/try-runtime",
	"parachain-info/try-runtime",
	"polkadot-runtime-common/try-runtime",
	"snowbridge-pallet-system-frontend/try-runtime",
	"snowbridge-runtime-common/try-runtime",
	"sp-runtime/try-runtime",
]
std = [
	"assets-common/std",
	"bp-asset-hub-rococo/std",
	"bp-asset-hub-westend/std",
	"bp-bridge-hub-rococo/std",
	"bp-bridge-hub-westend/std",
	"codec/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-session-benchmarking/std",
	"cumulus-pallet-weight-reclaim/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-aura/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-utility/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-metadata-hash-extension/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"log/std",
	"pallet-asset-conversion-ops/std",
	"pallet-asset-conversion-tx-payment/std",
	"pallet-asset-conversion/std",
	"pallet-asset-rewards/std",
	"pallet-assets-freezer/std",
	"pallet-assets/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-message-queue/std",
	"pallet-migrations/std",
	"pallet-multisig/std",
	"pallet-nft-fractionalization/std",
	"pallet-nfts-runtime-api/std",
	"pallet-nfts/std",
	"pallet-proxy/std",
	"pallet-revive/std",
	"pallet-session/std",
	"pallet-state-trie-migration/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-uniques/std",
	"pallet-utility/std",
	"pallet-xcm-benchmarks?/std",
	"pallet-xcm-bridge-hub-router/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"parachains-common/std",
	"polkadot-parachain-primitives/std",
	"polkadot-runtime-common/std",
	"primitive-types/std",
	"scale-info/std",
	"serde_json/std",
	"snowbridge-inbound-queue-primitives/std",
	"snowbridge-outbound-queue-primitives/std",
	"snowbridge-pallet-system-frontend/std",
	"snowbridge-runtime-common/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-keyring/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
	"testnet-parachains-constants/std",
	"westend-runtime-constants/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm-runtime-apis/std",
	"xcm/std",
	"pvq-primitives/std",
	"pvq-runtime-api/std",
	"pvq-extension/std",
	"pvq-extension-swap/std",
]

# Enable the metadata hash generation in the wasm builder.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A feature that should be enabled when the runtime should be built for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller, like logging for example.
on-chain-release-build = ["metadata-hash"]
